# crop

./: CMakeLists.txt  LICENSE.txt  README.md  char_stream.c  char_stream.h  default_level_streams.h  default_log_settings.c  level_tags.c  log.c  log.h  stream.c  stream.h  test.c
include/: production.h
include/scaffold/log/: level_streams.h  level_tags.h  log_settings.h
include/scaffold/test/: unit_test.h
include/scaffold/types/: dynamic_array.h
scaffold/: CMakeLists.txt
scaffold/include/log/: default_level_tags.h  default_log_settings.h  level_tags.h  log.h  log_level.h
scaffold/include/safe_mem/: safe_mem.h
scaffold/log/: default_level_streams.c  default_level_tags.c  level_streams.c  log.c  log_settings.c
scaffold/safe_mem/: safe_mem.c
src/: CMakeLists.txt  production.c  test.c
src/scaffold/: CMakeLists.txt
src/scaffold/log/: CMakeLists.txt  default_level_streams.c  default_level_tags.c  default_log_settings.c  level_streams.c  level_tags.c  log.c  log_settings.c
src/scaffold/safe_mem/: CMakeLists.txt  safe_mem.c
src/scaffold/test/: CMakeLists.txt  unit_test.c
src/scaffold/types/: CMakeLists.txt  dynamic_array.c
src/stream/: CMakeLists.txt  char_stream.c  stream.c
